# RogueCities_UrbanSpatialDesigner

./: .clangd  .gitignore  .gitmodules  .markdownlint.jsonc  .markdownlintignore  2026-02-26_Audit.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  JunctionData.cs  RcMasterPanel_old.cpp  ReadMe.md  Road.h  RoadData.cs  RoadLane.h  RogueCityVisualizerGui.lnk  StartupBuild.bat  __test_rc.cmd  azure-pipelines.yml  build_and_run.bat  build_and_run_gui.ps1  build_log.txt  build_project.bat  cleanup_obsolete.py  copy_script.cmake  imgui.ini  inject_cmake.py  install_deps.ps1  test.cpp  test_generators.cpp  texture_replay_manifest_test.json  tmpclaude-fe52-cwd  verify_and_cleanup.bat  visualizer.jsonl
AI/: Agent-Contract.md  CMakeLists.txt  ai_config.json
AI/ai_repl/: Cargo.toml
AI/ai_repl/src/: main.rs
AI/client/: CitySpecClient.cpp  CitySpecClient.h  UiAgentClient.cpp  UiAgentClient.h  UiDesignAssistant.cpp  UiDesignAssistant.h
AI/collaboration/: CHANGELOG_MANDATE.md  agent_2026-03-01_ai_app_assignment_prompt.md  antigravity_junction_impl_2026-03-03.md  asam_objects_handoff.md  claude_2026-03-01_agent_setup.md  claude_2026-03-01_code_reduction_gameplan.md  claude_2026-03-01_core_generators_assignment_prompt.md  claude_2026-03-01_core_generators_brief.md  claude_2026-03-01_gemma_suite.md  claude_2026-03-01_ui_panel_pattern_contract.md  claude_2026-03-02_lucide_icons_brief.md  claude_2026-03-05_imgui_devtools_tips.md  claude_2026-03-05_imgui_error_agent.md  claude_handoff_prompt.md  claude_phase5_inspector_brief.md  claude_phase6_layout_brief.md  codex_2026-02-28_session_brief.md  codex_2026-03-01_2d_cursor_followup.md  codex_2026-03-01_2d_cursor_selection_followup.md  codex_2026-03-01_core_audit_behavior_pass.md  codex_2026-03-01_embedded_library_followup.md  codex_2026-03-01_generator_audit_phase_execution.md  codex_2026-03-01_phase2_polygonops_generator_wiring.md  codex_2026-03-01_phase3_polygon_region_ops.md  codex_2026-03-01_phase4_region_output_topology.md  codex_2026-03-01_tool_wiring_session.md  codex_2026-03-01_visualizer_interaction_acceleration_pass.md  codex_2026-03-01_visualizer_interaction_assignment_prompt.md  codex_2026-03-01_visualizer_interaction_pass2.md  codex_2026-03-01_visualizer_interaction_pass3.md  codex_2026-03-01_visualizer_interaction_pass4.md  codex_2026-03-05_devshell_toolchain_alignment.md  codex_2026-03-06_full_panel_wrapper_migration.md  codex_2026-03-06_section_header_style_unification.md  codex_2026-03-06_ui_compliance_contract_refresh.md  codex_buildfix_tooldomain_badge_2026-02-28.md  codex_handoff_prompt.md  collaboration_sop_manifest.md  gemini_2026-03-01_visualizer_render_assignment_prompt.md  gemini_2026-03-01_visualizer_render_implementation.md  (+14 more)
AI/config/: AiConfig.cpp  AiConfig.h  ui_keymap.json
AI/config/themes/: Custom_20260217_013928.json  Custom_20260219_164447.json  Custom_20260225_144951.json
AI/docs/: Phase4_QuickReference.md  Plan to intergrate.md  ToolserverIntegration.md  code-reduction-audit.md  symbol_index.json
AI/docs/ui/: ui_design_20260227_024003_809.json  ui_introspection_20260208_103537_614.json  ui_introspection_20260228_101427_233.json  ui_introspection_headless_latest.json  ui_patterns.json  workspace_presets.json
AI/integration/: AiAssist.cpp  AiAssist.h
AI/protocol/: UiAgentProtocol.cpp  UiAgentProtocol.h
AI/runtime/: AiAvailability.cpp  AiAvailability.h  AiBridgeRuntime.cpp  AiBridgeRuntime.h
AI/tools/: HttpClient.cpp  HttpClient.h  Url.cpp  Url.h
app/: CMakeLists.txt
app/src/Docking/: DockLayoutManager.cpp
app/src/Editor/: CommandHistory.cpp  EditorManipulation.cpp  ViewportIndexBuilder.cpp
app/src/Integration/: CityOutputApplier.cpp  DatabaseComputeWorker.cpp  GenerationCoordinator.cpp  GeneratorBridge.cpp  RealTimePreview.cpp  ZoningBridge.cpp
app/src/Tools/: AxiomAnimationController.cpp  AxiomIcon.cpp  AxiomPlacementTool.cpp  AxiomTypeRegistry.cpp  AxiomVisual.cpp  BuildingTool.cpp  ContextWindowPopup.cpp  DistrictTool.cpp  GeometryPolicy.cpp  LotTool.cpp  RoadTool.cpp  SplineManipulator.cpp  WaterTool.cpp
app/src/UI/: DesignSystem.cpp  ThemeManager.cpp
app/src/Viewports/: MinimapViewport.cpp  PrimaryViewport.cpp  ViewportSyncManager.cpp
core/: CMakeLists.txt
core/src/Core/: Infomatrix.cpp
generators/: CMakeLists.txt
generators/_TempInclusionFolder_NO_LINK/Generator inclusions/: BlockGeneratorGEOS.cpp  CityModel.h  CityParams.cpp  CityParams.h  DistrictGenerator.cpp  ExportSchema.cpp  FrontageProfiles.cpp  Graph.cpp  GridStorage.cpp  GridStorage.h  Integrator.h  LotGenerator.cpp  PolygonFinder.cpp  PolygonFinder.h  RoadGenerator.h  RoadGraphMetrics.cpp  RoadGraphMetrics.h  SiteGenerator.cpp  Streamlines.cpp  Streamlines.h  TensorField.cpp  TensorField.h  WaterGenerator.cpp
generators/_TempInclusionFolder_NO_LINK/TempApp/: DockManager.cpp  DockManager.hpp  ImGuiCompat.hpp  Presets.cpp  RoadTypes.hpp  UserPreferences.cpp  UserPreferences.hpp  ViewportWindow.cpp  main.cpp
generators/config/: road_policy_defaults.json
generators/include/Districts/: AESPClassifier.hpp
generators/include/Pipeline/: CityGenrator.hpp
generators/include/Tensors/: BasisFields.hpp
rc_db_client/: CMakeLists.txt  Cargo.toml
rc_db_client/src/: axiom_table.rs  building_table.rs  clear_generated_reducer.rs  district_type_type.rs  lib.rs  lot_table.rs  lot_type.rs  mod.rs  place_axiom_reducer.rs  push_district_reducer.rs  push_road_reducer.rs  road_table.rs  vec_2_type.rs
rc_db_client/src/bindings/: axiom_type.rs  axiom_type_type.rs  building_type.rs  building_type_enum_type.rs  (+13 more)
rc_opendrive/: CMakeLists.txt  deploy.bat  deploy_files.py  do_copy.ps1  fix_includes.py  safe_copy.py
rc_opendrive/include/: Coordinates.h  Header.h  RoadGeometry.h
rc_opendrive/src/: Junction.cpp  OpenDriveMap.cpp  Railroad.cpp  RefLine.cpp  Road.cpp  RoadObject.cpp  RoadSignal.cpp
server/: Cargo.toml
server/src/: lib.rs
visualizer/: CMakeLists.txt  RC_UI_Mockup.html
visualizer/src/: main.cpp  main_gui.cpp  rc_ui_responsive.h  rc_ui_tokens.h  rc_ui_viewport_config.h
(+801 files in other folders)
